--- a/public/assets/sass/partials/_layout.scss
+++ b/public/assets/sass/partials/_layout.scss
@@ -9,6 +9,7 @@ html{
 	margin:0;
 	background:#F6F6F6;
 }
+
 body{
 	margin:0;
 	font-family:OpenSans, Arial, sans-serif;
@@ -21,16 +22,19 @@ ul, h1, h2, h3, p, li, header, nav{
 	padding:0;
 }
 .wrapper{
-	@include container;
-	//position:relative;
-	//@include susy-grid-background;
+	position:relative;
+	width:1120px;
+	margin:0 auto;
 }
-@include with-grid-settings(12, 60px, 20px, 10px){
-	.home
-	{ 
-		@include container; 
-		//@include susy-grid-background;
-	}
+// @include with-grid-settings(12, 60px, 20px, 10px){
+// 	.home
+// 	{ 
+// 		@include container; 
+// 		//@include susy-grid-background;
+// 	}
+// }
+.home{
+	width:100%;
 }
 .main{
 	@include squish(1, 1);
@@ -56,8 +60,10 @@ footer{
 #top{
 
 	position:relative;
+	width:1120px;
 	background:#F6F6F6;
-	-webkit-backface-visibility: hidden;
+
+
 }
 header{
 	padding:3em 0;
@@ -87,7 +93,7 @@ nav{
 		font-size:.95em;
 		padding:.5em 1em;
 		color:#A5A5A4;
-		@include transition(all, 0.2s, ease-in);
+		@include transition(all 0.2s ease-in);
 		&:hover{
 			color:$orange;
 		}
